# fractol

./: .gitignore  CMakeLists.txt  Makefile
includes/: fr_fractol.h  fractol.h
libft/: CMakeLists.txt  Makefile  ft_abs.c  ft_abs_double.c  ft_atoi.c  ft_atoi_hex.c  ft_bzero.c  ft_count_words.c  ft_dtoa.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoalen.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+35 more)
src/: fr_calculate.c  fr_close.c  fr_color_solid.c  fr_colors.c  fr_evaluate.c  fr_evluate.c  fr_fractol.c  fr_help.c  fr_info.c  fr_keyboard.c  fr_mouse.c  fr_plot_image.c  fr_read.c  fr_threads.c  main.c
